hphp/hack/test/typecheck/expression_trees/potential_void_return.php.like_types.exp
File "potential_void_return.php", line 15, characters 5-469:
This function can exit with and without returning a value (Typing[4421])
  File "potential_void_return.php", line 19, characters 9-41:
  Returning a value here.
  File "potential_void_return.php", line 15, characters 5-469:
  This function does not always return a value
File "potential_void_return.php", line 17, characters 12-20:
Typing error (Typing[4110])
  File "potential_void_return.php", line 17, characters 12-20:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "potential_void_return.php", line 19, characters 16-36:
Typing error (Typing[4110])
  File "potential_void_return.php", line 19, characters 16-36:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "potential_void_return.php", line 33, characters 12-20:
Typing error (Typing[4110])
  File "potential_void_return.php", line 33, characters 12-20:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "potential_void_return.php", line 35, characters 16-36:
Typing error (Typing[4110])
  File "potential_void_return.php", line 35, characters 16-36:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "potential_void_return.php", line 39, characters 7-13:
Typing error (Typing[4110])
  File "potential_void_return.php", line 39, characters 7-13:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
